force-app/main/default/objects/APISettings__mdt/APISettings__mdt.object-meta.xml
<CustomObject>
    <label>APISettings</label>
    <pluralLabel>APISettings</pluralLabel>
</CustomObject>