force-app/main/default/objects/APISettings__mdt/fields/API_ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>API_ClientSecret__c</fullName>
    <label>API_ClientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>