force-app/main/default/objects/APISettings__mdt/fields/API_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>API_EndPoint__c</fullName>
    <label>API_EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>