force-app/main/default/objects/APISettings__mdt/fields/API_Environment__c.field-meta.xml
<CustomField>
    <fullName>API_Environment__c</fullName>
    <label>API_Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>