force-app/main/default/objects/APISettings__mdt/fields/API_PartialEndPoint__c.field-meta.xml
<CustomField>
    <fullName>API_PartialEndPoint__c</fullName>
    <label>API_PartialEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>