force-app/main/default/objects/APISettings__mdt/fields/brand__c.field-meta.xml
<CustomField>
    <fullName>brand__c</fullName>
    <label>brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>