force-app/main/default/objects/APISettings__mdt/fields/channel__c.field-meta.xml
<CustomField>
    <fullName>channel__c</fullName>
    <label>channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>