force-app/main/default/objects/APISettings__mdt/fields/consentId__c.field-meta.xml
<CustomField>
    <fullName>consentId__c</fullName>
    <label>consentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>