force-app/main/default/objects/APISettings__mdt/fields/dealerCode__c.field-meta.xml
<CustomField>
    <fullName>dealerCode__c</fullName>
    <label>dealerCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>