force-app/main/default/objects/APISettings__mdt/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to check the json file without sending the order through</description>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>