force-app/main/default/objects/APISettings__mdt/fields/directoryListing__c.field-meta.xml
<CustomField>
    <fullName>directoryListing__c</fullName>
    <label>directoryListing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>