force-app/main/default/objects/APISettings__mdt/fields/emailTemplate1__c.field-meta.xml
<CustomField>
    <fullName>emailTemplate1__c</fullName>
    <label>emailTemplate1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>