force-app/main/default/objects/APISettings__mdt/fields/emailTemplate2__c.field-meta.xml
<CustomField>
    <fullName>emailTemplate2__c</fullName>
    <label>emailTemplate2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>