force-app/main/default/objects/APISettings__mdt/fields/erpTsProduct__c.field-meta.xml
<CustomField>
    <fullName>erpTsProduct__c</fullName>
    <label>erpTsProduct</label>
    <length>50</length>
    <type>Text</type>
</CustomField>