force-app/main/default/objects/APISettings__mdt/fields/Exception_Email__c.field-meta.xml
<CustomField>
    <fullName>Exception_Email__c</fullName>
    <description>The email address to send exceptions to</description>
    <label>Exception Email</label>
    <type>Email</type>
</CustomField>