force-app/main/default/objects/APISettings__mdt/fields/materialId__c.field-meta.xml
<CustomField>
    <fullName>materialId__c</fullName>
    <label>materialId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>