force-app/main/default/objects/APISettings__mdt/fields/NotificationRecipientsRole__c.field-meta.xml
<CustomField>
    <fullName>NotificationRecipientsRole__c</fullName>
    <label>NotificationRecipientsRole</label>
    <length>100</length>
    <type>Text</type>
</CustomField>