force-app/main/default/objects/APISettings__mdt/fields/salesAgentCode__c.field-meta.xml
<CustomField>
    <fullName>salesAgentCode__c</fullName>
    <label>salesAgentCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>