force-app/main/default/objects/APISettings__mdt/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>