force-app/main/default/objects/APISettings__mdt/fields/tsfOffering__c.field-meta.xml
<CustomField>
    <fullName>tsfOffering__c</fullName>
    <label>tsfOffering</label>
    <length>50</length>
    <type>Text</type>
</CustomField>